<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.irontest</groupId>
    <artifactId>irontest-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.11.0-SNAPSHOT</version>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>A web app for API test automation</description>
    <url>https://github.com/zheng-wang/irontest</url>

    <developers>
        <developer>
            <name>Zheng Wang</name>
            <email>zhengwang666@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/zheng-wang/irontest.git</connection>
        <developerConnection>scm:git:git@github.com:zheng-wang/irontest.git</developerConnection>
        <url>https://github.com/zheng-wang/irontest</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.install.skip>true</maven.install.skip>  <!-- Avoid installing Iron Test jars to Maven local repository -->
    </properties>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>irontest-core-server</module>
                <module>irontest-core-ui</module>
                <module>irontest-assembly</module>
                <module>irontest-iib</module>
                <module>irontest-mq</module>
            </modules>
        </profile>
        <profile>
            <id>dev</id>
            <modules>
                <module>irontest-core-server</module>
                <module>irontest-core-ui</module>
                <module>irontest-assembly</module>
                <module>irontest-iib</module>
                <module>irontest-mq</module>
            </modules>
            <build>
                <pluginManagement>
                    <plugins>
                        <!-- avoid creating any jar -->
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jar-plugin</artifactId>
                            <version>3.1.0</version>
                            <executions>
                                <execution>
                                    <id>default-jar</id> <!-- the id must be default-jar so as to override the default execution of the plugin -->
                                    <phase>none</phase>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>prod</id>
            <modules>
                <module>irontest-core-server</module>
                <module>irontest-core-ui</module>
                <module>irontest-assembly</module>
            </modules>
        </profile>
        <profile>
            <id>sonatype-ossrh</id>
            <modules>
                <module>irontest-core-server</module>
                <module>irontest-iib</module>
                <module>irontest-mq</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.0.1</version>
                        <configuration>
                            <additionalOptions>
                                <additionalOption>-Xdoclint:none</additionalOption>
                            </additionalOptions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <!-- This arg is used to prevent GPG signing prompt, so that gpg.passphrase
                                        property in settings.xml is picked up -->
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>